EDAN01/minizinc-1.6/tests/type-inst-checking/flatzinc/fzn-overload.fzn
% RUNS ON fzn_tc
% Check that we emit error messages if overloaded predicates occur in FlatZinc.
%
predicate foo(var int: x);
predicate foo(var float: x);
predicate foo(var int: x, var int: y);
solve satisfy;
